form alignment fixed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -153,7 +153,7 @@ header {
   
 }
 .form-element {
-  margin: 20px;
+  margin: 20px auto;
   border: 1px solid black;
   font-size: 1.1em;
   width: 60%;
@@ -161,6 +161,8 @@ header {
 .labels{
   font-size: 1.1em;
   width: 60%;
+  margin-left:auto;
+  margin-right:auto
 }
 #contact-me {
   text-align: center;
